# os-class-virtual-mem

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  monitor_queue.cpp  monitor_queue.hpp  pageTable.h  page_table.hpp  readReferences.h  read_references.hpp  simulator.cpp  virtual_mem.cpp
src/paging/: fifo_page_table.hpp  lru_clock_page_table.hpp  lru_page_table.hpp  optimal_page_table.hpp  page_table.hpp
